[package]
name = "starreaper"
version = "0.3.0"
edition = "2021"
description = "StarReaper — GitHub signal purification engine"
license = "MIT"

[[bin]]
name = "starreaper"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
clap = { version = "4", features = ["derive", "env"] }
chrono = { version = "0.4", features = ["serde"] }
ratatui = "0.30.0"
crossterm = "0.29.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
